clusters/cl01tl/manifests/rook-ceph/HTTPRoute-rook-ceph-dashboard.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: rook-ceph-dashboard
  namespace: rook-ceph
spec:
  hostnames:
    - "ceph.alexlebens.net"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
      matches:
        - path:
            type: PathPrefix
            value: /
